--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <button id="rockBtn">Rock</button>
+    <button id="paperBtn">Paper</button>
+    <button id="scissorsBtn">Scissors</button>
+
+    <script defer src="script.js"></script>
 </body>
 </html>
